--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@sanity/client": "^6.15.7",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.36.2",
     "@stripe/stripe-js": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
