--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.105.1",
+    "@react-three/fiber": "^8.16.1",
     "@sanity/client": "^6.15.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.36.2",
